--- a/branching-website.html
+++ b/branching-website.html
@@ -2,11 +2,37 @@
 <html>
   <head>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <title> Branching Practice Site </title>
+    <title> Carribean Island Resort </title>
   </head>
   <body>
-    <h1> Branching </h1>
+    <h1>Tropical Island Resort  </h1>
+
     <h2> A website to practice branching with Git. </h2>
-    <p> This page has been created in order to practice branching with Git and GitHub. By creating branches, we can work on different versions of the same code in the same repository simultaneously!  </p>
+    <p>  </p>
+    <a href = "accomodations.html">Accomodations</a>
+    <a href = "activities.html">Activities</a>
+    <a href = "travelarrangements.html">Travel Arrangements</a>
+    <a href = "pictures.html">Pictures</a>
+    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+      esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+      non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+   </p>
+   <br>
+   <p id="leftp"> "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+     praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
+     excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui
+     officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem
+     rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis
+     est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere
+     possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem
+     quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et
+     voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic
+     tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias
+     consequatur aut perferendis doloribus asperiores repellat."
+   </p>
+
   </body>
 </html>
